--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
     "expo": "~40.0.0",
     "expo-auth-session": "~3.0.0",
     "expo-random": "~10.0.0",
+    "expo-web-browser": "~8.6.0",
     "jwt-decode": "2.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "reason-react": "^0.9.1",
+    "reason-react-native": "^0.63.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "bs-platform": "^8.4.2",
+    "gentype": "^3.41.0"
   },
   "scripts": {
     "start": "expo start",
