--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,15 @@ buck-out/
 # Expo
 .expo/*
 web-build/
+src/bindings/jwt-decode/Config.res# Tell github to ignore rescript/bucklescript files
+.DS_Store
+.merlin
+.bsb.lock
+npm-debug.log
+/lib/bs/
+/node_modules/
+/bundleOutput/
+__tests__
+**/*.bs.js
+_esy/default/cache/project-0a9053df59c330216ab4e797be595248
+src/bindings/expo-auth-session
