--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "dependencies": {
-    "expo": "~40.0.0",
-    "expo-auth-session": "~3.0.0",
-    "expo-random": "~10.0.0",
-    "expo-web-browser": "~8.6.0",
-    "jwt-decode": "2.2.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12",
-    "reason-react": "^0.9.1",
-    "reason-react-native": "^0.63.2"
-  },
-  "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "bs-platform": "^8.4.2",
-    "gentype": "^3.41.0"
-  },
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo web",
-    "eject": "expo eject"
-  },
-  "private": true
+	"dependencies": {
+		"expo": "~40.0.0",
+		"expo-auth-session": "~3.0.0",
+		"expo-random": "~10.0.0",
+		"expo-web-browser": "~8.6.0",
+		"jwt-decode": "2.2.0",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+		"react-native-web": "~0.13.12",
+		"reason-react": "^0.9.1",
+		"reason-react-native": "^0.63.2"
+	},
+	"devDependencies": {
+		"@babel/core": "~7.9.0",
+		"bs-platform": "^8.4.2",
+		"gentype": "^3.41.0"
+	},
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo web",
+		"eject": "expo eject",
+		"clean": "bsb -clean-world",
+		"watch": "BS_WATCH_CLEAR=true bsb -make-world -w"
+	},
+	"private": true
 }
