--- a/bsconfig.json
+++ b/bsconfig.json
@@ -16,7 +16,24 @@
   "namespace": true,
   "bs-dependencies": [
     "reason-react",
+    "reason-promise",
     "reason-react-native"
   ],
+    "gentypeconfig": {
+    "language": "typescript",
+    "module": "es6",
+    "importPath": "relative",
+    "shims": {
+      "Js": "Js",
+      "React": "ReactShim",
+      "ReactEvent": "ReactEvent",
+      "ReasonPervasives": "ReasonPervasives",
+      "ReasonReact": "ReactShim"
+    },
+    "debug": {
+      "all": false
+    },
+    "exportInterfaces": true
+  },
   "refmt": 3
 }
