--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"react-dom": "16.13.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
 		"react-native-web": "~0.13.12",
+		"reason-promise": "^1.1.2",
 		"reason-react": "^0.9.1",
 		"reason-react-native": "^0.63.2"
 	},
