--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
 		"react-native-web": "~0.13.12",
 		"reason-date-fns": "^1.0.2",
+		"reason-future": "^2.6.0",
 		"reason-promise": "^1.1.2",
 		"reason-react": "^0.9.1",
 		"reason-react-native": "^0.63.2"
