--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"expo-random": "~10.0.0",
 		"expo-web-browser": "~8.6.0",
 		"jwt-decode": "2.2.0",
+		"querystring": "^0.2.0",
 		"rationale": "^0.2.0",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
